<!--
  ~ Created by abhinav for ETAOP Pvt. Ltd.
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last Updated on 6/5/21 7:25 PM
  -->

<resources>
    <string name="app_name">Firebase Example</string>
    <string name="database">Database Insert/Delete</string>
    <string name="type_here">Type here…</string>
    <string name="save">Save</string>
    <string name="realtime_database">Realtime Database</string>
    <string name="insert">Insert</string>
    <string name="fetch">Fetch</string>
    <string name="data_to_add_in_database">Data To Add In Database</string>
    <string name="firebase_local_notification">Firebase/Local Notification</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="fcm_token">FCM Token:</string>
    <string name="send_local_notification">Send Local Notification</string>
    <string name="send_firebase_notification">Send Firebase Notification</string>
</resources>