<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by abhinav for ETAOP Pvt. Ltd.
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last Updated on 10/06/21, 12:05 PM
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".notification.NotificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/title"
            android:padding="10dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:hint="@string/body"
            android:padding="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_local_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/send_local_notification"
            android:textAllCaps="false" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fcm_token" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_firebase_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/send_firebase_notification"
            android:textAllCaps="false" />


    </LinearLayout>

</RelativeLayout>