<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by abhinav for ETAOP Pvt. Ltd.
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last Updated on 6/5/21 6:51 PM
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".database.DatabaseInsertDeleteActivity">

    <ProgressBar
        android:id="@+id/pBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="10dp"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/insertData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_to_add_in_database"
        android:padding="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/insertData"
        android:text="@string/insert" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fetch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/insert"
        android:text="@string/fetch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDisplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fetch"
        android:padding="8dp" />

</RelativeLayout>